add watch/list verbs for configmaps to the custom cluster role in TestCitadelBootstrapKubernetes

--- a/tests/integration/security/citadel/testdata/citadel-rbac.yaml.tmpl
+++ b/tests/integration/security/citadel/testdata/citadel-rbac.yaml.tmpl
@@ -12,7 +12,7 @@ metadata:
 rules:
 - apiGroups: [""]
   resources: ["configmaps"]
-  verbs: ["create", "get", "update"]
+  verbs: ["create", "get", "update", "watch", "list"]
 - apiGroups: [""]
   resources: ["secrets"]
   verbs: ["create", "get", "watch", "list", "update", "delete"]
