--- a/samples/bookinfo/platform/consul/templates/bookinfo.sidecars.yaml.tmpl
+++ b/samples/bookinfo/platform/consul/templates/bookinfo.sidecars.yaml.tmpl
@@ -32,7 +32,7 @@ services:
       - -b
       - "9080"
   details-v1-sidecar:
-    image: {PROXY_HUB}/proxy_debug:{PROXY_TAG}
+    image: {PROXY_HUB}/proxyv2:{PROXY_TAG}
     network_mode: "container:consul_details-v1_1"
     entrypoint:
       - su
@@ -56,7 +56,7 @@ services:
       - -b
       - "9080"
   ratings-v1-sidecar:
-    image: {PROXY_HUB}/proxy_debug:{PROXY_TAG}
+    image: {PROXY_HUB}/proxyv2:{PROXY_TAG}
     network_mode: "container:consul_ratings-v1_1"
     entrypoint:
       - su
@@ -80,7 +80,7 @@ services:
       - -b
       - "9080"
   productpage-v1-sidecar:
-    image: {PROXY_HUB}/proxy_debug:{PROXY_TAG}
+    image: {PROXY_HUB}/proxyv2:{PROXY_TAG}
     network_mode: "container:consul_productpage-v1_1"
     entrypoint:
       - su
@@ -104,7 +104,7 @@ services:
       - -b
       - "9080"
   reviews-v1-sidecar:
-    image: {PROXY_HUB}/proxy_debug:{PROXY_TAG}
+    image: {PROXY_HUB}/proxyv2:{PROXY_TAG}
     network_mode: "container:consul_reviews-v1_1"
     entrypoint:
       - su
@@ -128,7 +128,7 @@ services:
       - -b
       - "9080"
   reviews-v2-sidecar:
-    image: {PROXY_HUB}/proxy_debug:{PROXY_TAG}
+    image: {PROXY_HUB}/proxyv2:{PROXY_TAG}
     network_mode: "container:consul_reviews-v2_1"
     entrypoint:
       - su
@@ -152,7 +152,7 @@ services:
       - -b
       - "9080"
   reviews-v3-sidecar:
-    image: {PROXY_HUB}/proxy_debug:{PROXY_TAG}
+    image: {PROXY_HUB}/proxyv2:{PROXY_TAG}
     network_mode: "container:consul_reviews-v3_1"
     entrypoint:
       - su
