Update common files and generated files

--- a/mixer/template/apikey/apiKey.pb.html
+++ b/mixer/template/apikey/apiKey.pb.html
@@ -80,6 +80,46 @@ spec:
 
 </td>
 </tr>
+<tr id="Template-api">
+<td><code>api</code></td>
+<td><code>string</code></td>
+<td>
+<p>The API being called (api.service).</p>
+
+</td>
+</tr>
+<tr id="Template-api_version">
+<td><code>apiVersion</code></td>
+<td><code>string</code></td>
+<td>
+<p>The version of the API (api.version).</p>
+
+</td>
+</tr>
+<tr id="Template-api_operation">
+<td><code>apiOperation</code></td>
+<td><code>string</code></td>
+<td>
+<p>The API operation is being called.</p>
+
+</td>
+</tr>
+<tr id="Template-api_key">
+<td><code>apiKey</code></td>
+<td><code>string</code></td>
+<td>
+<p>API key used in API call.</p>
+
+</td>
+</tr>
+<tr id="Template-timestamp">
+<td><code>timestamp</code></td>
+<td><code><a href="https://istio.io/docs/reference/config/policy-and-telemetry/istio.policy.v1beta1.html#TimeStamp">istio.policy.v1beta1.TimeStamp</a></code></td>
+<td>
+<p>Timestamp of API call.</p>
+
+</td>
+</tr>
 </tbody>
 </table>
 </section>
