--- a/mixer/template/edge/edge.pb.html
+++ b/mixer/template/edge/edge.pb.html
@@ -158,6 +158,110 @@ spec:
 
 </td>
 </tr>
+<tr id="Template-timestamp">
+<td><code>timestamp</code></td>
+<td><code><a href="https://istio.io/docs/reference/config/policy-and-telemetry/istio.policy.v1beta1.html#TimeStamp">istio.policy.v1beta1.TimeStamp</a></code></td>
+<td>
+<p>Timestamp of the edge</p>
+
+</td>
+</tr>
+<tr id="Template-source_workload_namespace">
+<td><code>sourceWorkloadNamespace</code></td>
+<td><code>string</code></td>
+<td>
+<p>Namespace of the source workload</p>
+
+</td>
+</tr>
+<tr id="Template-source_workload_name">
+<td><code>sourceWorkloadName</code></td>
+<td><code>string</code></td>
+<td>
+<p>Name of the source workload</p>
+
+</td>
+</tr>
+<tr id="Template-source_owner">
+<td><code>sourceOwner</code></td>
+<td><code>string</code></td>
+<td>
+<p>Owner of the source workload (often k8s deployment)</p>
+
+</td>
+</tr>
+<tr id="Template-source_uid">
+<td><code>sourceUid</code></td>
+<td><code>string</code></td>
+<td>
+<p>UID of the source workload</p>
+
+</td>
+</tr>
+<tr id="Template-destination_workload_namespace">
+<td><code>destinationWorkloadNamespace</code></td>
+<td><code>string</code></td>
+<td>
+<p>Namespace of the destination workload</p>
+
+</td>
+</tr>
+<tr id="Template-destination_workload_name">
+<td><code>destinationWorkloadName</code></td>
+<td><code>string</code></td>
+<td>
+<p>Name of the destination workload</p>
+
+</td>
+</tr>
+<tr id="Template-destination_owner">
+<td><code>destinationOwner</code></td>
+<td><code>string</code></td>
+<td>
+<p>Owner of the destination workload (often k8s deployment)</p>
+
+</td>
+</tr>
+<tr id="Template-destination_uid">
+<td><code>destinationUid</code></td>
+<td><code>string</code></td>
+<td>
+<p>UID of the destination workload</p>
+
+</td>
+</tr>
+<tr id="Template-destination_service_namespace">
+<td><code>destinationServiceNamespace</code></td>
+<td><code>string</code></td>
+<td>
+<p>Namespace of the destination Service</p>
+
+</td>
+</tr>
+<tr id="Template-destination_service_name">
+<td><code>destinationServiceName</code></td>
+<td><code>string</code></td>
+<td>
+<p>Name of the destination Service</p>
+
+</td>
+</tr>
+<tr id="Template-context_protocol">
+<td><code>contextProtocol</code></td>
+<td><code>string</code></td>
+<td>
+<p>Protocol used for communication (http, tcp)</p>
+
+</td>
+</tr>
+<tr id="Template-api_protocol">
+<td><code>apiProtocol</code></td>
+<td><code>string</code></td>
+<td>
+<p>The protocol type of the API call (http, https, grpc)</p>
+
+</td>
+</tr>
 </tbody>
 </table>
 </section>
