--- a/mixer/test/spyAdapter/template/quota/sampleQuota.pb.html
+++ b/mixer/test/spyAdapter/template/quota/sampleQuota.pb.html
@@ -23,6 +23,14 @@ number_of_entries: 1
 
 </td>
 </tr>
+<tr id="Template-dimensions">
+<td><code>dimensions</code></td>
+<td><code>map&lt;string,&nbsp;<a href="https://istio.io/docs/reference/config/policy-and-telemetry/istio.policy.v1beta1.html#Value">istio.policy.v1beta1.Value</a>&gt;</code></td>
+<td>
+<p>The unique identity of the particular quota to manipulate.</p>
+
+</td>
+</tr>
 </tbody>
 </table>
 </section>
