--- a/mixer/template/authorization/authorization.pb.html
+++ b/mixer/template/authorization/authorization.pb.html
@@ -88,6 +88,46 @@ spec:
 
 </td>
 </tr>
+<tr id="Action-namespace">
+<td><code>namespace</code></td>
+<td><code>string</code></td>
+<td>
+<p>Namespace the target action is taking place in.</p>
+
+</td>
+</tr>
+<tr id="Action-service">
+<td><code>service</code></td>
+<td><code>string</code></td>
+<td>
+<p>The Service the action is being taken on.</p>
+
+</td>
+</tr>
+<tr id="Action-method">
+<td><code>method</code></td>
+<td><code>string</code></td>
+<td>
+<p>What action is being taken.</p>
+
+</td>
+</tr>
+<tr id="Action-path">
+<td><code>path</code></td>
+<td><code>string</code></td>
+<td>
+<p>HTTP REST path within the service</p>
+
+</td>
+</tr>
+<tr id="Action-properties">
+<td><code>properties</code></td>
+<td><code>map&lt;string,&nbsp;<a href="https://istio.io/docs/reference/config/policy-and-telemetry/istio.policy.v1beta1.html#Value">istio.policy.v1beta1.Value</a>&gt;</code></td>
+<td>
+<p>Additional data about the action for use in policy.</p>
+
+</td>
+</tr>
 </tbody>
 </table>
 </section>
@@ -105,6 +145,33 @@ the caller identity.</p>
 </tr>
 </thead>
 <tbody>
+<tr id="Subject-user">
+<td><code>user</code></td>
+<td><code>string</code></td>
+<td>
+<p>The user name/ID that the subject represents.</p>
+
+</td>
+</tr>
+<tr id="Subject-groups">
+<td><code>groups</code></td>
+<td><code>string</code></td>
+<td>
+<p>Groups the subject belongs to depending on the authentication mechanism,
+&ldquo;groups&rdquo; are normally populated from JWT claim or client certificate.
+The operator can define how it is populated when creating an instance of
+the template.</p>
+
+</td>
+</tr>
+<tr id="Subject-properties">
+<td><code>properties</code></td>
+<td><code>map&lt;string,&nbsp;<a href="https://istio.io/docs/reference/config/policy-and-telemetry/istio.policy.v1beta1.html#Value">istio.policy.v1beta1.Value</a>&gt;</code></td>
+<td>
+<p>Additional attributes about the subject.</p>
+
+</td>
+</tr>
 <tr id="Subject-user">
 <td><code>user</code></td>
 <td><code>string</code></td>
@@ -154,6 +221,23 @@ passed to individual authorization adapters to adjudicate.</p>
 </tr>
 </thead>
 <tbody>
+<tr id="Template-subject">
+<td><code>subject</code></td>
+<td><code><a href="#Subject">Subject</a></code></td>
+<td>
+<p>A subject contains a list of attributes that identify
+the caller identity.</p>
+
+</td>
+</tr>
+<tr id="Template-action">
+<td><code>action</code></td>
+<td><code><a href="#Action">Action</a></code></td>
+<td>
+<p>An action defines &ldquo;how a resource is accessed&rdquo;.</p>
+
+</td>
+</tr>
 <tr id="Template-subject">
 <td><code>subject</code></td>
 <td><code><a href="#Subject">Subject</a></code></td>
